agregando portada, navbar, semantica y un poco de style en HTML

--- a/semana2.html
+++ b/semana2.html
@@ -1,43 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Mis animes favoritos</title>
-</head>
-<body>
-    <header>
-        <h1>Esta pagina hablara sobre mis animes favoritos</h1>
+  </head>
+  <body style="margin: 0; background-color: powderblue">
+    <header style="text-align: center">
+      <img
+        src="https://scontent-bog1-1.xx.fbcdn.net/v/t1.18169-9/549071_10151542543292356_1389562570_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=19026a&_nc_eui2=AeH7SK3bFoz_dUG-_tEmuLqoAsWHUcH4f6UCxYdRwfh_pXXi_tLiiyl64lyOx_rk0cU&_nc_ohc=OnJvuTU6boAAX9C-b63&_nc_ht=scontent-bog1-1.xx&oh=00_AT_75gQbFNU24SFfe8bsFtCYN7Khm8-2DImC5UVwbUSGLw&oe=621F62D5"
+        alt="portada"
+        style="width: 100%; height: 380px"
+      />
+      <h1>Esta pagina hablara sobre mis animes favoritos</h1>
+      <nav style="padding: 15px; word-spacing: 20px">
+        <span>
+          <a href="">Inicio</a> <a href="">Animes</a> <a href="">Galeria</a>
+          <a href="">Trailers</a>
+        </span>
+      </nav>
     </header>
-    <div>
-        <p>Me he visto <strong>muchos</strong> animes, sin embargo solo <u>algunos</u> me han impactado de varias maneras <br>
-        por que algunos me los vi desde la <i>infancia</i> y cuando los vuelvo a ver siento mucha nostalgia.</p>
-        <p>si tuviera que crear un top 5 de animes serian estos:</p>
-        <ol>
-            <li>Dragon Ball</li>
-            <li>Naruto</li>
-            <li>Inuyasha</li>
-            <li>Sakuraso no pet na kanojo</li>
-            <li>Sword art online</li>
-        </ol>
-        <p>Aunque <strong>hoy en dia</strong> han salido animes muy buenos que no podria colocar en un top 5 (osea con un orden) <br>
-        estos son:</p>
-        <ul>
-            <li>Kimetsu no yaiba</li>
-            <li>Shingeki no kioyin</li>
-            <li>Tokyo ghoul</li>
-            <li>Vinlad saga</li>
-        </ul>
-    </div>
-    <section>
+    <main style="text-align: center">
+      <p>
+        Me he visto <strong>muchos</strong> animes, sin embargo solo
+        <u>algunos</u> me han impactado de varias maneras <br />
+        por que algunos me los vi desde la <i>infancia</i> y cuando los vuelvo a
+        ver siento mucha nostalgia.
+      </p>
+      <p>si tuviera que crear un top 5 de animes serian estos:</p>
+      <ol style="list-style-position: inside">
+        <li>Dragon Ball</li>
+        <li>Naruto</li>
+        <li>Inuyasha</li>
+        <li>Sakuraso no pet na kanojo</li>
+        <li>Sword art online</li>
+      </ol>
+      <p>
+        Aunque <strong>hoy en dia</strong> han salido animes muy buenos que no
+        podria colocar en un top 5 (osea con un orden) <br />
+        estos son:
+      </p>
+      <ul style="list-style-position: inside">
+        <li>Kimetsu no yaiba</li>
+        <li>Shingeki no kioyin</li>
+        <li>Tokyo ghoul</li>
+        <li>Vinlad saga</li>
+      </ul>
+
+      <section>
         <h2>Imagenes</h2>
-        <img src="https://i.blogs.es/04ac6a/2560_3000/1366_2000.jpeg" alt="GOKU" width="20%" height="10%">
-        <img src="assets/img/kimetsu-no-yaiba-.jpg" alt="kimetsu" width="20%" height="20%">
-    </section>
-    <section>
+        <img
+          src="https://i.blogs.es/04ac6a/2560_3000/1366_2000.jpeg"
+          alt="GOKU"
+          width="20%"
+          height="10%"
+        />
+        <img
+          src="assets/img/kimetsu-no-yaiba-.jpg"
+          alt="kimetsu"
+          width="20%"
+          height="20%"
+        />
+      </section>
+      <section>
         <h2>Trailers de anime</h2>
-        <video width="420" height="340"  autoplay muted controls>
-            <source src="assets/vid/y2meta.com - Vinland Saga Temporada 2 _ Teaser Tráiler Oficial (Sub. Español).mp4" type="video/mp4">
+        <video width="420" height="340" autoplay muted controls>
+          <source
+            src="assets/vid/y2meta.com - Vinland Saga Temporada 2 _ Teaser Tráiler Oficial (Sub. Español).mp4"
+            type="video/mp4"
+          />
         </video>
-    </section>
-</body>
+      </section>
+    </main>
+  </body>
 </html>
