agregando footer y paginas

--- a/semana2.html
+++ b/semana2.html
@@ -14,8 +14,9 @@
       <h1>Esta pagina hablara sobre mis animes favoritos</h1>
       <nav style="padding: 15px; word-spacing: 20px">
         <span>
-          <a href="">Inicio</a> <a href="">Animes</a> <a href="">Galeria</a>
-          <a href="">Trailers</a>
+          <a href="">Inicio</a> <a href="assets/pages/Animes.html">Animes</a>
+          <a href="assets/pages/Galeria.html">Galeria</a>
+          <a href="assets/pages/Trailers.html">Trailers</a>
         </span>
       </nav>
     </header>
@@ -71,5 +72,17 @@
         </video>
       </section>
     </main>
+    <footer
+      style="
+        width: 100%;
+        height: 100px;
+        background-color: red;
+        text-align: center;
+        padding: 5px;
+        box-sizing: border-box;
+      "
+    >
+      <h2 style="color: white">juanmita_bh@hotmail.com</h2>
+    </footer>
   </body>
 </html>
