agregando formularios y pagina nueva de recomendaciones

--- a/assets/pages/Galeria.html
+++ b/assets/pages/Galeria.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Imagenes de animes</title>
   </head>
   <body style="margin: 0; text-align: center">
     <header>
@@ -20,7 +20,7 @@
           >
           <a href="assets/pages/Animes.html">Animes</a>
           <a href="assets/pages/Galeria.html">Galeria</a>
-          <a href="assets/pages/Trailers.html">Trailers</a>
+          <a href="assets/pages/Recomendaciones.html">Trailers</a>
         </span>
       </nav>
     </header>
@@ -38,8 +38,9 @@
       />
       <p>death note</p>
       <img
-        src="https://p4.wallpaperbetter.com/wallpaper/1017/4/915/death-note-death-note-anime-wallpaper-preview.jpg"
-        alt=""
+        src="https://static.zerochan.net/DEATH.NOTE.full.1584565.jpg"
+        alt="dn"
+        width="50%"
       />
     </main>
   </body>
