--- a/assets/pages/Animes.html
+++ b/assets/pages/Animes.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Animes vistos</title>
   </head>
   <body style="margin: 0; text-align: center">
     <header>
@@ -11,7 +11,7 @@
         alt="portada"
         style="width: 100%; height: 380px"
       />
-      <h1>Lista de animes que me he visto</h1>
+      <h1>Lista de animes que me he visto y que recomiendo</h1>
       <nav style="padding: 15px; word-spacing: 20px">
         <span>
           <a
@@ -20,7 +20,7 @@
           >
           <a href="assets/pages/Animes.html">Animes</a>
           <a href="assets/pages/Galeria.html">Galeria</a>
-          <a href="assets/pages/Trailers.html">Trailers</a>
+          <a href="assets/pages/Recomendaciones.html">Trailers</a>
         </span>
       </nav>
     </header>
