modificando las imagenes

--- a/semana2.html
+++ b/semana2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Mis animes favoritos</title>
   </head>
-  <body style="margin: 0; background-color: powderblue">
+  <body style="margin: 0; background-color: azure">
     <header style="text-align: center">
       <img
         src="https://scontent-bog1-1.xx.fbcdn.net/v/t1.18169-9/549071_10151542543292356_1389562570_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=19026a&_nc_eui2=AeH7SK3bFoz_dUG-_tEmuLqoAsWHUcH4f6UCxYdRwfh_pXXi_tLiiyl64lyOx_rk0cU&_nc_ohc=OnJvuTU6boAAX9C-b63&_nc_ht=scontent-bog1-1.xx&oh=00_AT_75gQbFNU24SFfe8bsFtCYN7Khm8-2DImC5UVwbUSGLw&oe=621F62D5"
