--- a/assets/pages/Galeria.html
+++ b/assets/pages/Galeria.html
@@ -26,10 +26,15 @@
     </header>
     <main>
       <p>Kimetsu no yaiba</p>
-      <img
-        src="https://c4.wallpaperflare.com/wallpaper/295/163/719/anime-anime-boys-picture-in-picture-kimetsu-no-yaiba-kamado-tanjir%C5%8D-hd-wallpaper-preview.jpg"
-        alt=""
-      />
+      <figure>
+        <img
+          src="https://c4.wallpaperflare.com/wallpaper/295/163/719/anime-anime-boys-picture-in-picture-kimetsu-no-yaiba-kamado-tanjir%C5%8D-hd-wallpaper-preview.jpg"
+          alt=""
+        />
+        <figcaption>wallpaper de kimetsu</figcaption>
+        <!-- Para colocar un pie de imagen -->
+      </figure>
+
       <p>shingeki no kyojin</p>
       <img
         src="https://images8.alphacoders.com/108/thumb-1920-1081458.jpg"
