agregando nuevos styles, mejorando el formulario y header

--- a/pages/Recomendaciones.html
+++ b/pages/Recomendaciones.html
@@ -126,7 +126,7 @@
             ></textarea>
           </label>
 
-          <input type="submit" value="enviar" class="primary-button" />
+          <input type="submit" value="Enviar" class="primary-button" />
         </form>
       </section>
     </main>
