--- a/pages/semana2.html
+++ b/pages/semana2.html
@@ -28,7 +28,7 @@
     </header>
 
     <main style="text-align: center">
-      <section>
+      <!-- <section>
         <p>
           Me he visto <strong>muchos</strong> animes, sin embargo solo
           <u>algunos</u> me han impactado de varias maneras <br />
@@ -80,11 +80,11 @@
             type="video/mp4"
           />
         </video>
-      </section>
+      </section> -->
     </main>
 
     <footer>
-      <h2 style="color: white">juanmita_bh@hotmail.com</h2>
+      <!-- <h2 style="color: white">juanmita_bh@hotmail.com</h2> -->
     </footer>
   </body>
 </html>
