--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -3,22 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <title>Imagenes de animes</title>
+    <link rel="stylesheet" href="/styles/Galeria.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&family=Raleway:ital,wght@0,100;0,200;1,100&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body style="margin: 0; text-align: center">
+  <body>
     <header>
-      <img
-        src="https://wallpapercave.com/wp/dJ3wOz2.jpg"
-        alt="portada"
-        style="width: 100%; height: 380px"
-      />
-      <h1>Imagenes de algunos animes</h1>
-      <nav style="padding: 15px; word-spacing: 20px">
-        <span>
-          <a href="/pages/semana2.html">Inicio</a>
-          <a href="/pages/Animes.html">Animes</a>
-          <a href="/pages/Galeria.html">Galeria</a>
-          <a href="/pages/Recomendaciones.html">Recomendaciones</a>
-        </span>
+      <nav class="navbar">
+        <div>
+          <img src="/assets/img/try1.5.png" alt="portada" class="logo" />
+          <h1>Mis animes favoritos</h1>
+        </div>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="/pages/Animes.html">Animes</a></li>
+          <li><a href="/pages/Galeria.html">Galeria</a></li>
+          <li><a href="/pages/Recomendaciones.html">Recomendaciones</a></li>
+        </ul>
       </nav>
     </header>
     <main>
