arreglando errores y colocando la primer galeria en su primer version

--- a/pages/Animes.html
+++ b/pages/Animes.html
@@ -19,7 +19,7 @@
           <h1>Mis animes favoritos</h1>
         </div>
         <ul>
-          <li><a href="#">Inicio</a></li>
+          <li><a href="/pages/semana2.html">Inicio</a></li>
           <li><a href="/pages/Animes.html">Animes</a></li>
           <li><a href="/pages/Galeria.html">Galeria</a></li>
           <li><a href="/pages/Recomendaciones.html">Recomendaciones</a></li>
