--- a/pages/Animes.html
+++ b/pages/Animes.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <main>
-      <ol style="list-style-position: inside">
+      <!-- <ol style="list-style-position: inside">
         <li>Dragon Ball</li>
         <li>Naruto</li>
         <li>Inuyasha</li>
@@ -44,7 +44,70 @@
         <li>Boku no hero</li>
         <li>Fairy tail</li>
         <li>Boruto</li>
-      </ol>
+      </ol> -->
+
+      <section class="review-container">
+        <img
+          src="/assets/img/PKNY2.2.jpg"
+          alt="Poster"
+          class="review-container-portada"
+        />
+        <div>
+          <ul class="review">
+            <li class="tittle">Kimetsu no yaiba</li>
+            <ul class="review-content">
+              <li class="sub-tittle">Sinopsis</li>
+              <p>bla bla</p>
+              <li class="sub-tittle">Reseña:</li>
+              <p>bla bla</p>
+              <li class="sub-tittle">Lo recomiendo?</li>
+              <p>si</p>
+            </ul>
+          </ul>
+        </div>
+      </section>
+
+      <section class="review-container">
+        <img
+          src="/assets/img/PVS.jpg"
+          alt="Poster"
+          class="review-container-portada"
+        />
+        <div>
+          <ul class="review">
+            <li class="tittle">Kimetsu no yaiba</li>
+            <ul class="review-content">
+              <li class="sub-tittle">Sinopsis</li>
+              <p>bla bla</p>
+              <li class="sub-tittle">Reseña:</li>
+              <p>bla bla</p>
+              <li class="sub-tittle">Lo recomiendo?</li>
+              <p>si</p>
+            </ul>
+          </ul>
+        </div>
+      </section>
+
+      <section class="review-container">
+        <img
+          src="/assets/img/PP.jpg"
+          alt="Poster"
+          class="review-container-portada"
+        />
+        <div>
+          <ul class="review">
+            <li class="tittle">Kimetsu no yaiba</li>
+            <ul class="review-content">
+              <li class="sub-tittle">Sinopsis</li>
+              <p>bla bla</p>
+              <li class="sub-tittle">Reseña:</li>
+              <p>bla bla</p>
+              <li class="sub-tittle">Lo recomiendo?</li>
+              <p>si</p>
+            </ul>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
