mejorando header y reiventando pagina de inicio

--- a/pages/Animes.html
+++ b/pages/Animes.html
@@ -20,7 +20,7 @@
         </div>
         <ul>
           <li><a href="/pages/semana2.html">Inicio</a></li>
-          <li><a href="/pages/Animes.html">Animes</a></li>
+          <li><a href="/pages/Animes.html">Reseñas</a></li>
           <li><a href="/pages/Galeria.html">Galeria</a></li>
           <li><a href="/pages/Recomendaciones.html">Recomendaciones</a></li>
         </ul>
@@ -75,7 +75,7 @@
         />
         <div>
           <ul class="review">
-            <li class="tittle">Kimetsu no yaiba</li>
+            <li class="tittle">Vinlad saga</li>
             <ul class="review-content">
               <li class="sub-tittle">Sinopsis</li>
               <p>bla bla</p>
@@ -96,7 +96,7 @@
         />
         <div>
           <ul class="review">
-            <li class="tittle">Kimetsu no yaiba</li>
+            <li class="tittle">Parasyte</li>
             <ul class="review-content">
               <li class="sub-tittle">Sinopsis</li>
               <p>bla bla</p>
@@ -109,5 +109,9 @@
         </div>
       </section>
     </main>
+
+    <button class="btn-up">
+      <a href="#top"> <img src="/assets/img/UP.svg" alt="up" /> </a>
+    </button>
   </body>
 </html>
