--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -20,7 +20,7 @@
         </div>
         <ul>
           <li><a href="/pages/semana2.html">Inicio</a></li>
-          <li><a href="/pages/Animes.html">Animes</a></li>
+          <li><a href="/pages/Animes.html">Reseñas</a></li>
           <li><a href="/pages/Galeria.html">Galeria</a></li>
           <li><a href="/pages/Recomendaciones.html">Recomendaciones</a></li>
         </ul>
