--- a/ANIMES/pages/Animes.html
+++ b/ANIMES/pages/Animes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Animes vistos</title>
-    <link rel="stylesheet" href="/styles/Animes.css" />
+    <link rel="stylesheet" href="/ANIMES/styles/Animes.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,10 +19,12 @@
           <h1>Mis animes favoritos</h1>
         </div>
         <ul>
-          <li><a href="/pages/semana2.html">Inicio</a></li>
-          <li><a href="/pages/Animes.html">Reseñas</a></li>
-          <li><a href="/pages/Galeria.html">Galeria</a></li>
-          <li><a href="/pages/Recomendaciones.html">Recomendaciones</a></li>
+          <li><a href="/ANIMES/pages/semana2.html">Inicio</a></li>
+          <li><a href="/ANIMES/pages/Animes.html">Reseñas</a></li>
+          <li><a href="/ANIMES/pages/Galeria.html">Galeria</a></li>
+          <li>
+            <a href="/ANIMES/pages/Recomendaciones.html">Recomendaciones</a>
+          </li>
         </ul>
       </nav>
     </header>
