--- a/ANIMES/pages/Recomendaciones.html
+++ b/ANIMES/pages/Recomendaciones.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animes recomendados</title>
-    <link rel="stylesheet" href="/styles/Recomendaciones.css" />
+    <link rel="stylesheet" href="/ANIMES/styles/Recomendaciones.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,10 +21,12 @@
           <h1>Mis animes favoritos</h1>
         </div>
         <ul>
-          <li><a href="/pages/semana2.html">Inicio</a></li>
-          <li><a href="/pages/Animes.html">Reseñas</a></li>
-          <li><a href="/pages/Galeria.html">Galeria</a></li>
-          <li><a href="/pages/Recomendaciones.html">Recomendaciones</a></li>
+          <li><a href="/ANIMES/pages/semana2.html">Inicio</a></li>
+          <li><a href="/ANIMES/pages/Animes.html">Reseñas</a></li>
+          <li><a href="/ANIMES/pages/Galeria.html">Galeria</a></li>
+          <li>
+            <a href="/ANIMES/pages/Recomendaciones.html">Recomendaciones</a>
+          </li>
         </ul>
       </nav>
     </header>
