--- a/ANIMES/pages/semana2.html
+++ b/ANIMES/pages/semana2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Mis animes favoritos</title>
-    <link rel="stylesheet" href="/styles/semana2.css" />
+    <link rel="stylesheet" href="/ANIMES/styles/semana2.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,9 +20,11 @@
         </div>
         <ul>
           <li><a href="#">Inicio</a></li>
-          <li><a href="/pages/Animes.html">Reseñas</a></li>
-          <li><a href="/pages/Galeria.html">Galeria</a></li>
-          <li><a href="/pages/Recomendaciones.html">Recomendaciones</a></li>
+          <li><a href="/ANIMES/pages/Animes.html">Reseñas</a></li>
+          <li><a href="/ANIMES/">Galeria</a></li>
+          <li>
+            <a href="/ANIMES/pages/Recomendaciones.html">Recomendaciones</a>
+          </li>
         </ul>
       </nav>
     </header>
