agregando la programacion y mejoras

--- a/PROYECTO_C1/index.html
+++ b/PROYECTO_C1/index.html
@@ -44,11 +44,11 @@
       <nav class="menu-content" id="sticker">
         <ul class="menu-content-list">
           <li class="items i1"><a href="#descripcion">Descripcion</a></li>
-          <li class="items i2"><a href=""> Programacion</a></li>
+          <li class="items i2"><a href="#programacion"> Programacion</a></li>
           <li class="items i3">
             <a href="#canciones"> Canciones de los artistas</a>
           </li>
-          <li class="items i4"><a href="">Informacion boletas</a></li>
+          <li class="items i4"><a href="#boletas">Informacion boletas</a></li>
           <li class="items i5"><a href="#reservas">Reservas</a></li>
           <li class="items i6"><a href="#patrocinadores">Patrocinadores</a></li>
         </ul>
@@ -70,14 +70,14 @@
         </h1> -->
         <aside class="event-info">
           <ul class="event-info-content">
-            <li class="event-info-tittle">Loud Riot</li>
+            <li class="event-info-tittle">LOUD RIOT</li>
             <li>
               Es un evento caracterizado por traer artistas <br />
               que te haran vibrar y agitar el corazon para que saques esa
               version de ti que no conocias...
             </li>
             <li class="event-info-tittle">Fecha y lugar</li>
-            <li>Marzo 3 del 2022</li>
+            <li>Marzo 4 y 5 del 2022</li>
           </ul>
           <div class="mapouter">
             <div class="gmap_canvas">
@@ -131,9 +131,56 @@
           </div>
         </aside>
       </section>
-
-      <section class="programacion">
-        <p>Programación del evento- horario</p>
+      <section class="programacion" id="programacion">
+        <div class="day1">
+          <h1 class="day1-tittle">Viernes 4</h1>
+          <h1 class="artist-main">WOS</h1>
+          <ul class="ar2 ar">
+            <li>WIZ KHALIFA</li>
+            <li>KID CUDI</li>
+          </ul>
+          <ul class="ar3 ar">
+            <li>TAME IMPALA</li>
+            <li>DUKI</li>
+            <li>KODAK BLACK</li>
+          </ul>
+          <ul class="ar4 ar">
+            <li>KASE.O</li>
+            <li>ALKOLIRYKOZ</li>
+            <li>AKAPELLAH</li>
+          </ul>
+          <ul class="ar5 ar">
+            <li>50 CENT</li>
+            <li>lOS RIVERA DESTINO</li>
+            <li>MANU CHAO</li>
+            <li>KIDD KEO</li>
+          </ul>
+        </div>
+        <img class="icon" src="assets/img/Asset 2.png" alt="" />
+        <div class="day2">
+          <h1 class="day2-tittle">Sabado 5</h1>
+          <h1 class="artist-main">KENDRICK LAMAR</h1>
+          <ul class="ar2 ar">
+            <li>ELADIO CARRION</li>
+            <li>C.TANGANA</li>
+          </ul>
+          <ul class="ar3 ar">
+            <li>NICKI NICOLE</li>
+            <li>OLIVER TREE</li>
+            <li>CALLE 13</li>
+          </ul>
+          <ul class="ar4 ar">
+            <li>CHARLES ANS</li>
+            <li>LOUTA</li>
+            <li>PHILL COLLINS</li>
+          </ul>
+          <ul class="ar5 ar">
+            <li>CUCO</li>
+            <li>KOTA THE FRIEND</li>
+            <li>DILLOM</li>
+            <li>ARTICK MONKEYS</li>
+          </ul>
+        </div>
       </section>
       <section class="asides" id="canciones">
         <aside class="spotify-container">
@@ -198,7 +245,7 @@
           </div>
         </aside>
       </section>
-      <section class="pp_venta">Precios y puntos de venta</section>
+      <section class="pp_venta" id="boletas">Precios y puntos de venta</section>
       <section class="form" id="reservas">
         <form action="" method="post">
           <h2 class="titlle-form">Reserva tus boletas</h2>
