pagina terminada: boletas agregadas y mejoras

--- a/PROYECTO_C1/index.html
+++ b/PROYECTO_C1/index.html
@@ -64,10 +64,6 @@
         ></iframe>
       </section>
       <section class="evento" id="descripcion">
-        <!-- <h1 class="evento-tittle">
-          ¿De qué trata el evento? ¿Quiénes participarán? Fecha Lugar ¿Cómo
-          llegar?
-        </h1> -->
         <aside class="event-info">
           <ul class="event-info-content">
             <li class="event-info-tittle">LOUD RIOT</li>
@@ -151,12 +147,12 @@
           </ul>
           <ul class="ar5 ar">
             <li>50 CENT</li>
-            <li>lOS RIVERA DESTINO</li>
+            <li>LOS RIVERA DESTINO</li>
             <li>MANU CHAO</li>
             <li>KIDD KEO</li>
           </ul>
         </div>
-        <img class="icon" src="assets/img/Asset 3.png" alt="" />
+        <img class="icon" src="assets/img/Asset 2.png" alt="" />
         <div class="day2">
           <h1 class="day2-tittle">Sabado 5</h1>
           <h1 class="artist-main">KENDRICK LAMAR</h1>
@@ -245,7 +241,16 @@
           </div>
         </aside>
       </section>
-      <section class="pp_venta" id="boletas">Precios y puntos de venta</section>
+      <section class="pp_venta" id="boletas">
+        <h1>Precios</h1>
+        <div class="E12">
+          <img src="assets/img/E1.png" alt="" />
+          <img src="assets/img/E2.png" alt="" />
+        </div>
+        <figure class="promE">
+          <img src="assets/img/E1E2.png" alt="" />
+        </figure>
+      </section>
       <section class="form" id="reservas">
         <form action="" method="post">
           <h2 class="titlle-form">Reserva tus boletas</h2>
