agregando pagina de retroalimentacion y mejoras

--- a/PROYECTO_C1/index.html
+++ b/PROYECTO_C1/index.html
@@ -5,27 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="assets/img/estereo.png" type="image/x-icon" />
-    <!-- <script
-      type="text/javascript"
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="/PROYECTO_C1/assets/js/jquery.sticky.js"
-    ></script>
-    <script>
-      $(window).ready(function () {
-        $("#sticker").sticky({ topSpacing: 0 });
-      });
-    </script> -->
     <title>LOUD RIOT</title>
   </head>
   <body>
     <header>
       <div class="tittle_logo">
         <h1 class="tittle">LOUD</h1>
-        <img class="logo" src="/PROYECTO_C1/assets/img/estereo.png" alt="" />
+        <img class="logo" src="assets/img/estereo.png" alt="" />
         <h1 class="tittle">RIOT</h1>
       </div>
       <svg
@@ -252,7 +238,7 @@
         </figure>
       </section>
       <section class="form" id="reservas">
-        <form action="" method="post">
+        <form action="exisota.html" method="post">
           <h2 class="titlle-form">Reserva tus boletas</h2>
           <label for="pname">
             <span>Nombre completo</span> <br />
@@ -285,7 +271,6 @@
               name="phone"
               id="phone"
               placeholder="123-45-678"
-              pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
               required
             />
           </label>
@@ -297,6 +282,7 @@
               list="cantidad"
               placeholder="Cantidad de boletas"
               class="input input-cantidad-list"
+              required
             />
             <datalist id="cantidad">
               <option value="1"></option>
@@ -380,7 +366,7 @@
     <footer>
       <div class="tittle_logo2">
         <h1 class="tittle2">LOUD</h1>
-        <img class="logo2" src="/PROYECTO_C1/assets/img/estereo.png" alt="" />
+        <img class="logo2" src="assets/img/estereo.png" alt="" />
         <h1 class="tittle2">RIOT</h1>
       </div>
       <div class="footer-content">
