--- a/JS/Ejercicios/hardmode/colors.html
+++ b/JS/Ejercicios/hardmode/colors.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body onreset="cambiarFondo()">
+  <body>
     <section class="item1 item" id="section1">
       <strong class="NameColor" id="text1">color</strong>
       <button type="button" class="boton">Cambiar</button>
